--- a/Makefile.am
+++ b/Makefile.am
@@ -19,6 +19,11 @@ psplash_CPPFLAGS += $(LIBDRM_CFLAGS) -DENABLE_DRM
 psplash_LDFLAGS += $(LIBDRM_LIBS)
 endif
 
+if ENABLE_DRM_LEASE
+psplash_CPPFLAGS += $(LIBDRM_LEASE_CFLAGS) -DENABLE_DRM_LEASE
+psplash_LDFLAGS += $(LIBDRM_LEASE_LIBS)
+endif
+
 if HAVE_SYSTEMD
 psplash_CPPFLAGS += $(SYSTEMD_CFLAGS) -DHAVE_SYSTEMD
 psplash_LDFLAGS += $(SYSTEMD_LIBS)
